# Paper_ingest

./: .gitignore  =10.0.0  AGENTS.md  pyproject.toml
.sisyphus/: boulder.json
logs/: Chen 等 - 2024 - Electroactive biomaterials regulate the electrophysiological microenvironment to promote bone and ca.pdf_20260301_113847.json  Chen 等 - 2024 - Electroactive biomaterials regulate the electrophysiological microenvironment to promote bone and ca.pdf_20260301_125037.json  Chen 等 - 2024 - Electroactive biomaterials regulate the electrophysiological microenvironment to promote bone and ca.pdf_20260301_125522.json  Chen 等 - 2024 - Electroactive biomaterials regulate the electrophysiological microenvironment to promote bone and ca.pdf_20260301_130955.json  Chen 等 - 2024 - Electroactive biomaterials regulate the electrophysiological microenvironment to promote bone and ca.pdf_20260301_132318.json
prompts/: reading_facts.md  reading_logic.md  reading_profile.md  reading_synthesis.md  reading_themes.md  vision_page_structure.md
schemas/: _index.json  manifest.schema.json
tests/: _helpers.py  test_citations_inline_anchor_filter.py  test_citations_mapping.py  test_citations_merged_mapping.py  test_citations_reference_artifacts.py  test_citations_reference_detection.py  test_citations_reference_enrichment.py  test_cli_verify_smoke.py  test_continued_marker_trim.py  test_continued_marker_variants.py  test_contract_guard.py  test_crossref_reference_conversion.py  test_extractor_line_sidecar.py  test_extractor_span_text_reconstruction.py  test_figures_tables_stability.py  (+40 more)
(+257 files in other folders)
